src/components/Header/Header.css
.Header {
  width: 100%;
  height: 150px;
  margin: 0;
  padding: 10px;
  background-color: rgb(31, 31, 31);
  display: block;
}

.Logo {
  margin: auto;
  padding: 20px 0px;
  width: 50%;
  display: block;
  flex-direction: row;
}

.img {
  display: block;
  margin: auto;
  top: 0;
  bottom: 0;
  width: 80%;
  height: auto;
  background-color: var(--gray_1);
  display: flex;
  list-style: none;
}

.main-nav {
  width: 100%;
  margin: 0;
  padding: 10px;
  background-color: var(--gray_1);
  display: flex;
  list-style: none;
}

.nav-link {
  margin: 0 20px;
  color: var(--crimson_1);
}

.push {
  margin-left: auto;
}

